--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,8 @@
     <title>Angular 2 App | ng2-webpack</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script> 
+    
     <base href="/">
   </head>
   <body>
